@@ -1,3 +1,11 @@
+2008-07-08  Dave Morrison  <drm@finkproject.org>
+
+	* inject.pl: (partially) revert to a simpler version of the script
+	* inject.pl: If our VERSION has four parts (separated by decimal 
+	points), then it is an update tarball and we require that the 
+	distribution with a three-part VERSION (the first three parts of ours)
+	has already been installed. This is tested using the stamp-rel-* files.
+
 2008-07-06  Dave Morrison  <drm@finkproject.org>
 
 	* inject.pl: adapt the script so that, if passed the flag "-updates",
